--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
 .heading {
   width: 100vw;
   height: 5.5rem;
-  background-color: #f1c40f;
+  background-color: #15a9e4;
   color: #282936;
   box-shadow: 0px 10px 16px rgb(248, 247, 247);
 }
@@ -67,7 +67,7 @@ button.learn-more .circle {
   margin: 0;
   width: 3rem;
   height: 3rem;
-  background: #f1c12e;
+  background: #52f194f7;
   border-radius: 1.625rem;
 }
 button.learn-more .circle .icon {
